# wynwood

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx_wynwood.conf  pyproject.toml
.github/workflows/: deploy.yml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/api/: apps.py
apps/bookings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_additionalservice_booking_discount_code_and_more.py  0003_create_additional_services_data.py
apps/core/: mixins.py  models.py
apps/core/templatetags/: booking_utils.py  i18n_urls.py
apps/notifications/: admin.py  apps.py  models.py  signals.py
apps/notifications/migrations/: 0001_initial.py
apps/properties/: admin.py  apps.py  models.py  urls.py  views.py
apps/properties/migrations/: 0001_initial.py
config/: urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  (+1 more)
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/emails/: booking_confirmation.html
templates/pages/: checkout.html  confirmation.html  home.html  my_bookings.html  payment.html  property_detail.html  search_results.html
templates/partials/: _booking_summary.html  _footer.html  _navbar.html  _property_card.html  _search_bar.html
(+1 files in other folders)
